--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -28,6 +29,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1"
   }
